--- a/_playground/css/unit.css
+++ b/_playground/css/unit.css
@@ -2,13 +2,23 @@
 /*
 em - 지정된 font size가 1em임. 상대적인 수치이다.
 rem - 최상위에 지정된 font-size의 상대적인 수치이다. html에 지정된 사이즈 기준이 된다.
-
+vm - viewport width
+vh - viewport height
 */
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 html {
   font-size: 62.5%;
 }
 
 #box1 {
+  width: 100%;
+  height: 90vh;
   font-size: 30px;
   width: 25rem;
   background-color: #aaa;
