--- a/css/index.css
+++ b/css/index.css
@@ -1,20 +1,303 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300&family=Nanum+Gothic:wght@400;700;800&display=swap");
+@import url(https://fonts.googleapis.com/icon?family=Material+Icons);
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
 body {
+  padding: 3rem;
   font-family: "Lato", sans-serif;
   font-family: "Nanum Gothic", sans-serif;
 }
 
+@-webkit-keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-5rem);
+            transform: translateX(-5rem);
+  }
+  80% {
+    -webkit-transform: translateX(1rem);
+            transform: translateX(1rem);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-5rem);
+            transform: translateX(-5rem);
+  }
+  80% {
+    -webkit-transform: translateX(1rem);
+            transform: translateX(1rem);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@-webkit-keyframes moveInRight {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(10rem);
+            transform: translateX(10rem);
+  }
+  80% {
+    -webkit-transform: translateX(-1rem);
+            transform: translateX(-1rem);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(10rem);
+            transform: translateX(10rem);
+  }
+  80% {
+    -webkit-transform: translateX(-1rem);
+            transform: translateX(-1rem);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+h2 {
+  padding: 1rem 0;
+  font-size: 2.4rem;
+  font-weight: 800;
+  text-transform: uppercase;
+  background: -webkit-gradient(linear, right top, left top, from(#fff), to(#000));
+  background: linear-gradient(to left, #fff, #000);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+h2:hover {
+  padding-left: 1.5rem;
+}
+
+h3 {
+  padding: 0.5rem 0;
+  color: #474747;
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.btn-text {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-decoration: none;
+  color: #2e3d52;
+  display: inline-block;
+  padding-bottom: 3px;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.btn-text:hover {
+  color: #fff;
+  background-color: #25889c;
+  text-decoration: underline;
+}
+
 header {
   width: 100%;
-  height: 100%;
-  background-color: #999;
+  height: 90vh;
+  background-image: -webkit-gradient(linear, left top, right top, from(#2b2929), to(#fff)), url(../images/shanghai.jpg);
+  background-image: linear-gradient(to right, #2b2929 0%, #fff 100%), url(../images/shanghai.jpg);
+  background-size: cover;
+  background-blend-mode: multiply;
+}
+
+header #logo-text {
+  position: absolute;
+  left: 7rem;
+  top: 5rem;
+  font-size: 5.6rem;
+  text-transform: uppercase;
+  font-family: "Lato", sans-serif;
+  font-weight: 100;
+  color: #fff;
+  letter-spacing: -0.5rem;
+  -webkit-animation-name: moveInLeft;
+          animation-name: moveInLeft;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+}
+
+header #header-text {
+  position: absolute;
+  left: 7rem;
+  right: 7rem;
+  bottom: 10%;
+  color: #fff;
+  letter-spacing: -0.1rem;
+  font-weight: 700;
 }
 
 header #header-text-main {
-  font-size: 30px;
+  font-size: 5.2rem;
+  line-height: 7.2rem;
+  -webkit-animation-name: moveInRight;
+          animation-name: moveInRight;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
 }
 
 header #header-text-sub {
-  font-size: 20px;
+  margin-top: 3rem;
+  font-size: 2.4rem;
+  -webkit-animation-name: moveInLeft;
+          animation-name: moveInLeft;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-delay: 1.5s;
+          animation-delay: 1.5s;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+}
+
+main #section-about {
+  background-color: #ededed;
+  padding: 7rem 0 6.5rem 6rem;
+}
+
+main #section-about::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+main #section-about-words {
+  width: 65%;
+  float: left;
+}
+
+main #section-about-words p {
+  padding: 1.5rem 0;
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-align: justify;
+}
+
+main #section-about-photo {
+  width: 35%;
+  float: left;
+}
+
+main #section-about-photo .photo {
+  position: relative;
+  width: 18rem;
+  height: 12rem;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+main #section-about-photo .photo:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  padding: 1rem;
+  border: 3px solid #2e3d52;
+  z-index: 10;
+}
+
+main #section-about-photo .photo:nth-child(1) {
+  left: 1rem;
+  top: 3rem;
+}
+
+main #section-about-photo .photo:nth-child(2) {
+  left: 6rem;
+}
+
+main #section-about-photo .photo img {
+  width: 100%;
+  height: 100%;
+  -webkit-box-shadow: 3px 3px 9px 0px #000;
+          box-shadow: 3px 3px 9px 0px #000;
+}
+
+footer {
+  color: #b9b9b9;
+  background-color: #3f4a56;
+  padding: 9rem 7rem 3rem 7rem;
+}
+
+footer::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+footer #logo-text-footer {
+  width: 25%;
+  font-size: 4rem;
+  font-family: "Lato", sans-serif;
+  font-weight: 100;
+  text-transform: uppercase;
+  float: left;
+}
+
+footer #copyright {
+  width: 75%;
+  font-size: 1.2rem;
+  float: left;
+}
+
+footer #copyright p:nth-child(1) {
+  margin-bottom: 2rem;
+  word-break: break-all;
+  text-align: justify;
+  -webkit-column-count: 3;
+          column-count: 3;
+  -webkit-column-gap: 3rem;
+          column-gap: 3rem;
+  -webkit-column-rule-style: dashed;
+          column-rule-style: dashed;
+  -webkit-column-rule-width: 1px;
+          column-rule-width: 1px;
+  -webkit-column-rule-color: #888;
+          column-rule-color: #888;
 }
 /*# sourceMappingURL=index.css.map */
