--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,5 +1,10 @@
 main {
+  @include clearFix();
+
   #section-about {
+    width: 66.66%;
+    float: left;
+    height: 42rem;
     background-color: #ededed;
     padding: 7rem 0 6.5rem 6rem;
 
@@ -7,6 +12,7 @@ main {
     &-words {
       width: 65%;
       float: left;
+      padding: 2rem 2rem 0 0;
       p {
         padding: 1.5rem 0;
         font-size: 1.4rem;
@@ -46,5 +52,45 @@ main {
     }
   }
   #section-etc {
+    width: 33.34%;
+    float: left;
+
+    [id^="etc-"] {
+      // id중에 etc로 시작하는 모든 것
+      height: 14rem;
+    }
+
+    .etc {
+      &:nth-child(1) {
+        background-color: $color-blue-1;
+      }
+      &:nth-child(2) {
+        background-color: $color-blue-2;
+      }
+      &:nth-child(3) {
+        background-color: $color-blue-3;
+      }
+      .etc-icon {
+        i {
+          padding-top: 3.5rem;
+          width: 30%;
+          float: left;
+          text-align: center;
+          font-size: 6rem;
+        }
+      }
+      .etc-text {
+        width: 70%;
+        float: left;
+        p {
+          margin: 0.5rem 0;
+          padding-right: 3.5rem;
+          text-align: justify;
+          font-size: 1.4rem;
+        }
+      }
+    }
+    [src^="images1/"] {
+    }
   }
 }
