--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -4,5 +4,10 @@ $color-white: #fff;
 $color-primary: #2e3d52;
 $color-secondary: #25889c;
 $color-grey-light: #b9b9b9;
+
 $color-blue-dark: #3f4a56;
+$color-blue-1: #a8d8ff;
+$color-blue-2: #c1e1ff;
+$color-blue-3: #d6eaff;
+
 $color-grey-dark: #474747;
