--- a/sass/index.scss
+++ b/sass/index.scss
@@ -4,6 +4,8 @@
 @import "base/base";
 @import "base/animations";
 @import "base/typo";
+@import "base/utilities";
+
 @import "components/button";
 
 @import "layout/header";
